--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,7 +4,7 @@ version '1.0'
 buildscript {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
         maven{
             url 'https://artifact.bytedance.com/repository/Volcengine/'
         }
@@ -18,7 +18,7 @@ buildscript {
 rootProject.allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
         maven{
             url 'https://artifact.bytedance.com/repository/Volcengine/'
         }
@@ -28,11 +28,7 @@ rootProject.allprojects {
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 28
-
-    if (project.android.hasProperty("namespace")) {
-        namespace = "com.bytedance.rangers_applog_flutter_plugin"
-    }
+    compileSdkVersion 29
 
     defaultConfig {
         minSdkVersion 16
@@ -44,5 +40,5 @@ android {
 }
 
 dependencies {
-    compileOnly 'com.bytedance.applog:RangersAppLog-Lite-cn:6.1.3'
+    compileOnly 'com.bytedance.applog:RangersAppLog-Lite-cn:6.14.2'
 }
