--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: rangers_applog_flutter_plugin
 description: flutter plugin for RangersAppLog.
-version: 1.3.0
+version: 1.4.1
 homepage: "https://github.com/bytedance/rangers_applog_flutter_plugin"
 
 environment:
@@ -31,7 +31,8 @@ flutter:
         pluginClass: RangersApplogFlutterPlugin
       ios:
         pluginClass: RangersApplogFlutterPlugin
-
+      ohos:
+        pluginClass: RangersApplogFlutterPlugin
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
