--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,7 +4,7 @@ version '1.0'
 buildscript {
     repositories {
         google()
-        mavenCentral()
+        jcenter()
         maven{
             url 'https://artifact.bytedance.com/repository/Volcengine/'
         }
@@ -18,7 +18,7 @@ buildscript {
 rootProject.allprojects {
     repositories {
         google()
-        mavenCentral()
+        jcenter()
         maven{
             url 'https://artifact.bytedance.com/repository/Volcengine/'
         }
@@ -28,12 +28,12 @@ rootProject.allprojects {
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 28
 
     if (project.android.hasProperty("namespace")) {
-         namespace = "com.bytedance.rangers_applog_flutter_plugin"
+        namespace = "com.bytedance.rangers_applog_flutter_plugin"
     }
-    
+
     defaultConfig {
         minSdkVersion 16
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -44,5 +44,5 @@ android {
 }
 
 dependencies {
-    compileOnly 'com.bytedance.applog:RangersAppLog-Lite-cn:6.14.2'
+    compileOnly 'com.bytedance.applog:RangersAppLog-Lite-cn:6.1.3'
 }
